<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DejaMiTest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="camera_content">CAMERA\nCONTENT</string>
    <string name="gallery_content">GALLERY\nCONTENT</string>
    <string name="login_content">LOGIN\nCONTENT</string>
    <string name="main_content">MAIN\nCONTENT</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="capture_button">Capture</string>
    <string name="gallery_button">Gallery</string>
    <string name="gallery_image_description">Gallery Image</string>

</resources>
