<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".LoginActivity" >

    <LinearLayout
            android:id="@+id/content"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

        <EditText 
            android:id="@+id/user_id_field"
            android:inputType="text"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="5dp"
    		android:layout_marginRight="5dp"
   			android:hint="@string/user_id"
    		android:layout_weight="1"
            />
        <EditText 
            android:id="@+id/password_field"
            android:inputType="textPassword"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="5dp"
    		android:layout_marginRight="5dp"
   			android:hint="@string/password"
    		android:layout_weight="1"
            />
        <Button
            android:id="@+id/login_button"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/login" />
    </LinearLayout>

</FrameLayout>
